# rtest

./: Cargo.toml  data.txt  default.nix  flake.nix  shell.nix
src/: funcs.rs  main.rs
