[package]
name = "rtest"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false



[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
shlex = "1.3.0"

[[bin]]
name = "rtest"
path = "src/main.rs"
